Invoke jlink tool and generate ry launcher